Fix arrows spacing

--- a/index.css
+++ b/index.css
@@ -59,7 +59,7 @@ a {
   position: absolute;
   top: 0;
   height: 100%;
-  right: 5rem;
+  right: 2.25rem;
   
   font-family: helldivers-bold;
   font-size: 4rem;
@@ -72,7 +72,7 @@ a {
   position: absolute;
   top: 0;
   height: 100%;
-  left: 2rem;
+  left: 2.25rem;
   
   font-family: helldivers-bold;
   font-size: 4rem;
